# siri-ask-gpt

./: Dockerfile  README.md  pyproject.toml
siri_ask_gpt/: app_config.py  main.py
